--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
@@ -1,92 +1,17 @@
 <div class="about">
-  <em>Mobile Oxford</em> is a new service run for students and staff at the
-  University of Oxford as well as the general public. Incorporating information and access to services
-  from across the institution, <em>Mobile Oxford</em> is a central point
-  to act as your guide in both the city and the University.
+  <p>
+    <strong>
+      <em>Mobile Oxford</em> is a new service run for students and staff at the
+      University of Oxford as well as the general public.
+    </strong>
+  </p>
+  <p>
+    Incorporating information and access to services from across the
+    institution, <em>Mobile Oxford</em> is a central point to act as your
+    guide in both the city and the University.
+  </p>
 </div>    
 
-<div class="column-left">
-<div class="features">
-<h2>Features</h2>
-
-<ul>
-  <li class="feature-contacts">
-    <img src="{{ MEDIA_URL }}png/demos/contacts.png" width="160" height="160" class="even" />
-    <h3>Contact search</h3>
-    <p>
-      Search the University contact directory with one-click access to
-      e-mail or phone.
-    </p>
-  </li>
-  
-  <li class="feature-z3950">
-    <img src="{{ MEDIA_URL }}png/demos/z3950.png" width="160" height="160" class="odd" />
-    <h3>Library search</h3>
-    <p>
-      Search for books and other items by author, title or
-      <abbr title="International Standard Book Number">ISBN</abbr>.
-      Results are displayed with the nearest first and simple
-      maps to guide you to the library.
-    </p>
-  </li>
-
-  <li class="feature-maps">
-    <img src="{{ MEDIA_URL }}png/demos/maps.png" width="160" height="160" class="even" />
-    <h3>Maps</h3>
-    <p>
-      Search for colleges, departments, restaurants, bus stops and much
-      more. Bus stops have live arrival predictions, post boxes have
-      collection times (where available), and University pages let you
-      explore the relationships between them.
-    </p>
-  </li>
-
-  <li class="feature-podcasts">
-    <img src="{{ MEDIA_URL }}png/demos/podcasts.png" width="160" height="160" class="odd" />
-    <h3>Podcasts</h3>
-    <p>
-      Listen to any podcast published through the University's
-      <a href="http://podcasts.ox.ac.uk">podcast service</a> and Apple's iTunes U.
-    </p>
-  </li>
-  
-  <li class="feature-webcams">
-    <img src="{{ MEDIA_URL }}png/demos/webcams.png" width="160" height="160" class="even" />
-    <h3>Webcams</h3>
-    <p>
-      View webcams from across the city. Check the weather, the traffic, or simply wave at yourself.
-    </p>
-  </li>
-
-  <li class="feature-news">
-    <img src="{{ MEDIA_URL }}png/demos/news.png" width="160" height="160" class="odd" />
-    <h3>News</h3>
-    <p>
-      Read news from across the University to find out about events and recent developments.
-    </p>
-  </li>
-
-  <li class="feature-results">
-    <img src="{{ MEDIA_URL }}png/demos/results.png" width="160" height="160" class="even" />
-    <h3>Results releases</h3>
-    <p>
-      Check whether your examination school has had its results released so you know when to check the Student Self-Service System.
-    </p>
-  </li>
-
-  <li class="feature-weather">
-    <img src="{{ MEDIA_URL }}png/demos/weather.png" width="160" height="160" class="odd" />
-    <h3>Weather</h3>
-    <p>
-      Check the latest weather reports from Oxford.
-    </p>
-  </li>
-
-</ul>
-<div style="clear:both;"> </div>
-</div>
-</div>
-<div class="column-middle">
 <div class="preview">
   <h2>Preview</h2>
 
@@ -147,5 +72,4 @@
 		<li><a href="http://www.facebook.com/pages/Mobile-Oxford/133576996628" title="Facebook - Mobile Oxford">Facebook</a></li>
 		<li><a href="http://twitter.com/mobileox" title="Twitter - Mobile Oxford">Twitter</a></li>
 	</ul>
-</div>
 </div>
