--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
@@ -153,10 +153,10 @@
       <ul>
         <li{% ifequal page "about" %} class="selected"{% endifequal %}><a id="link-about" href="{% url core_exposition "" %}">About</a></li>
         <li{% ifequal page "features" %} class="selected"{% endifequal %}><a id="link-features" href="{% url core_exposition "" %}features/">Features</a></li>
-        <li{% ifequal page "accessing" %} class="selected"{% endifequal %}><a id="link-accessing" href="{% url core_exposition "" %}accessing/">Accessing</a></li>
-        <li{% ifequal page "get-involved" %} class="selected"{% endifequal %}><a id="link-get-involved" href="{% url core_exposition "" %}get-involved/">Get involved</a></li>
+{#        <li{% ifequal page "accessing" %} class="selected"{% endifequal %}><a id="link-accessing" href="{% url core_exposition "" %}accessing/">Accessing</a></li> #}
+{#        <li{% ifequal page "get-involved" %} class="selected"{% endifequal %}><a id="link-get-involved" href="{% url core_exposition "" %}get-involved/">Get involved</a></li> #}
         <li{% ifequal page "blog" %} class="selected"{% endifequal %}><a id="link-blog" href="{% url core_exposition "" %}blog/">Blog</a></li>
-        <li{% ifequal page "help" %} class="selected"{% endifequal %}><a id="link-help" href="{% url core_exposition "" %}help/">Help</a></li>
+{#        <li{% ifequal page "help" %} class="selected"{% endifequal %}><a id="link-help" href="{% url core_exposition "" %}help/">Help</a></li> #}
       </ul>
     </div>
       <a href="http://www.ox.ac.uk/">
