--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/features.xhtml
@@ -1,7 +1,3 @@
-
-<style>
-
-</style>
 <script type="text/javascript">
   page_name = "features";
   
@@ -69,6 +65,9 @@
     
       <p>Search the University e-mail and telephone directories from your
          phone.</p>
+         
+      <p>Also included are important contact numbers for students, including
+         welfare, emergency and University services.</p>
     </div>
   
     <div class="feature-video">
@@ -92,7 +91,22 @@
     <div class="feature-info">
       <h3>Maps</h3>
     
-      <p>We have maps!</p>
+      <p>
+        Search for colleges, departments, restaurants, bus stops and much
+        more.
+      </p>
+      
+      <p>
+        Each page provides a range of useful information, including:
+      </p>
+      
+      <ul>
+        <li>live arrival predictions for bus stops</li>
+        <li>opening hours and phone numbers for pubs, restaurants and
+            caf&eacute;s</li>
+        <li>collection times for post boxes</li>
+        <li>images for colleges</li>
+      </ul>
     </div>
   
     <div class="feature-video">
@@ -116,7 +130,12 @@
     <div class="feature-info">
       <h3>Library search</h3>
     
-      <p>Search the University's libraries.</p>
+      <p>
+        Search for books and other items by author, title or
+        <abbr title="International Standard Book Number">ISBN</abbr>.
+        Results are displayed with the nearest first and simple
+        maps to guide you to the library.
+      </p>
     </div>
   
     <div class="feature-video">
@@ -140,7 +159,10 @@
     <div class="feature-info">
       <h3>Podcasts</h3>
     
-      <p>There are podcasts.</p>
+      <p>
+        Listen to any podcast published through the University's
+        <a href="http://podcasts.ox.ac.uk">podcast service</a> and Apple's <span style="white-space:nowrap;">iTunes U</span>.
+      </p>
     </div>
   
     <div class="feature-video">
@@ -165,6 +187,21 @@
       <h3>Search</h3>
     
       <p>Search is heavily integrated into Mobile Oxford.</p>
+      
+      <p>You can search for any text on the site, with results presented
+         with relevant metadata and an icon showing which part of the site they
+         came from.</p>
+         
+      <p>In addition you can also go direct to the page you want in the following by entering&hellip;</p>
+      
+      <ul>
+        <li>a post code to find items in that area</li>
+        <li>an eight-digit bus stop code (e.g. <samp>69312345</samp>) to go straight to that stop</li>
+        <li>a central stop code (e.g. <samp>C1</samp>) to go to that bus stop</li>
+        <li>an OUCS unit code (e.g. <samp>ashmus</samp>) to view a unit's page</li>
+        <li>a ten or 13 digit ISBN to view a library record</li>
+        <li>an eight or 13 digit ISSN to view a serial library holding</li>
+      </ul>
     </div>
   
     <div class="feature-video">
@@ -188,7 +225,28 @@
     <div class="feature-info">
       <h3>Other features</h3>
     
-      <p>Foo</p>
+      <p>On top of all this, Mobile Oxford provides easy access to the
+         following sources of information:</p>
+         
+      <dl>
+        <dt>Results release announcements</dt>
+        <dd>The Examination Schools now publish all results through Student
+            Self-Service, announcing their availability on the Schools website.
+            Mobile Oxford saves you worrying about whether your results are
+            available while you're on the move.</dd>
+            
+        <dt>Weather</dt>
+        <dd>Local observations and forecasts for Oxford are presented in a
+            concise form.</dd>
+            
+        <dt>Webcams</dt>
+        <dd>View webcams from accross the city. Useful for gauging traffic or
+            weather.</dd>
+            
+        <dt>OUCS status</dt>
+        <dd>Easy access to the availability of key OUCS services.</dd>
+      </dl>
+        
     </div>
   
     <div class="feature-video">
