--- a/trunk/mobile_portal/mobile_portal/templates/static/about.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/static/about.xhtml
@@ -6,9 +6,7 @@
     <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
     <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
     provision of location-aware applications and adaption of Weblearn (Oxford's implementation of the Sakai VLE) for use on
-    mobile devices. <br />
-    
-    It is designed and managed by Tim Fernando and Alexander Dutton at Oxford University Computing Services.
+    mobile devices.
     </div></div>
 </div>
 
