--- a/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -96,15 +96,6 @@ div.about p {
     margin:0;
 }
 
-div.features, div.preview, div.access, div.data-usage {
-    width:200px;
-    float:left;
-    margin:15px;
-}
-
-div.features h2, div.preview h2, div.access h2, div.data-usage h2 {
-    margin-top:0;
-}
 
 div.access, div.data-usage {
     margin-top:15px;
@@ -297,3 +288,109 @@ div.logos {
   video {
     -moz-border-radius:15px;
   }
+
+
+
+div.centre-col {
+   width:290px;
+   margin:15px 15px 0 15px;
+   float:left;
+}
+
+div.outer-col {
+   width:240px;
+   margin-top:15px;
+   float:left;
+}
+
+
+/* Slideshow */
+
+div.two-col {
+   width:545px;
+   margin-right:15px;
+   float:left;
+}
+
+div.slideshow {
+   width: 545px;
+   height: 360px;
+   background-color:#ffffff;
+   margin-top:15px;
+   margin-right:15px;
+  -moz-border-radius:10px;
+}
+
+div.slideshow ul {
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+
+div.slideshow img {
+  -moz-border-radius:10px;
+  
+}
+
+/* Preview */
+
+div.preview {
+  min-height:330px;
+}
+
+div.preview p {
+  text-align:center;
+  margin:0;
+  font-size:12pt;
+}
+
+div.preview p.domain-link {
+  text-align:center;
+  font-size:20pt;
+  margin:5px 0;
+}
+
+div.preview a:visited {
+  color:#0000ff;
+}
+
+div.preview ul {
+  font-size:12pt;
+  list-style:none;
+  margin:5px 0 5px 20px;  
+  padding:0;
+}
+
+div.preview hr {
+  margin:5px 0 15px 0;
+  padding:0;
+}
+
+div.preview li a {
+  display:block;
+  padding:10px 10px 10px 40px;
+  background-position:center left;
+  background-repeat:no-repeat;
+}
+
+a#code-qr-link {
+  background-image:url('../png/barcodes/qrcode-small.png');
+}
+
+a#code-dm-link {
+  background-image:url('../png/barcodes/datamatrix-small.png');
+}
+
+a#code-ms-link {
+  background-image:url('../png/barcodes/mstag-small.png');
+}
+
+p.preview-link a {
+  background-image:url('../png/desktop/monitor.png');
+  background-position:center left;
+  background-repeat:no-repeat;
+  padding:0px 10px 0px 40px;
+  margin-left:15px;
+  display:block;
+}
+  
