--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/container.xhtml
@@ -10,8 +10,10 @@
 	<link rel="icon" type="image/vnd.microsoft.icon" href="{{ MEDIA_URL }}ico/favicon.ico"/>
 	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL}}css/desktop_about.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL}}css/jquery.lightbox-0.5.css"/>
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	<script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"> </script>    
+	<script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"> </script>
+	<script src="{{ MEDIA_URL }}js/jquery.lightbox-0.5.min.js" type="text/javascript"> </script>
     <style type="text/css">
       div.navigation {
         text-align:center;
@@ -177,13 +179,13 @@
   <p>Developed by the OUCS Erewhon Project, through the JISC-funded Institutional Innovation programme.</p>
   <div class="logos">
   <a href="http://jisc.ac.uk/">
-    <img src="{{ MEDIA_URL }}png/jisc-logo.png" width="100" height="52" alt="JISC" style="position:relative; top:7px;" />
+    <img src="{{ MEDIA_URL }}png/jisc-logo.png" width="100" height="52" alt="JISC" style="position:relative; top:0px;" />
   </a>
   <a href="http://erewhon.oucs.ox.ac.uk/">
-    <img src="{{ MEDIA_URL }}png/erewhon-logo.png" width="128" height="68" alt="JISC" style="position:relative; top:0px;" />
+    <img src="{{ MEDIA_URL }}png/erewhon-logo.png" width="150" height="60" alt="JISC" style="position:relative; top:9px;" />
   </a>
   <a href="http://www.oucs.ox.ac.uk/">
-    <img src="{{ MEDIA_URL }}png/oucs-logo.png" width="254" height="63" alt="OUCS" style="position:relative; top:9px;" />
+    <img src="{{ MEDIA_URL }}png/oucs-logo.png" width="254" height="63" alt="OUCS" style="position:relative; top:2px;" />
   </a>
   </div>
   <p>With thanks to the following for providing data:</p>
