--- a/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/exposition/about.xhtml
@@ -42,9 +42,9 @@ function nextSlide() {
 
 <div class="slideshow">
   <ul>
-    <li><img src="{{ MEDIA_URL }}png/slideshow/1.png" width="545" height="360" alt="Foo"/></li>
+    <li><img src="{{ MEDIA_URL }}png/slideshow/0.jpg" width="545" height="360" alt="Foo"/></li>
     <li><img src="{{ MEDIA_URL }}png/slideshow/2.png" width="545" height="360" alt="Bar"/></li>
-    <li><img src="{{ MEDIA_URL }}png/slideshow/0.png" width="545" height="360" alt="Baz"/></li>
+    <li><img src="{{ MEDIA_URL }}png/slideshow/0.jpg" width="545" height="360" alt="Baz"/></li>
     <li><img src="{{ MEDIA_URL }}png/slideshow/3.png" width="545" height="360" alt="Quux"/></li>
     <li><img src="{{ MEDIA_URL }}png/slideshow/4.png" width="545" height="360" alt="Spam"/></li>
     <li><img src="{{ MEDIA_URL }}png/slideshow/5.png" width="545" height="360" alt="Eggs"/></li>
@@ -142,4 +142,5 @@ function nextSlide() {
   </ul>
 </div>
 </div>
+<div style="clear:both;"> </div>
 </div>
