--- a/trunk/mobile_portal/mobile_portal/templates/sakai/signup_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/sakai/signup_detail.xhtml
@@ -4,7 +4,9 @@
 
 <div class="section">
     <h2>{{ event.title }}</h2>
-<div class="bubble"><div class="article pad-10">
+    
+{# Metadata about the tutorial slots #} 
+<div class="bubble"><div class="article pad-10">   
 <dl>
   <dt>Description</dt>
   {# CLENSE ME! #}
@@ -39,30 +41,29 @@
   {% endif %}
 {% endif %}
 </dl>
-
 </div></div>
+{# End Metadata about the tutorial slots #}
 
 
 <ul>
 {% for ts in event.signupTimeSlotItems %}
-<li>
+<li {% if forloop.last %}class="round-bottom"{% endif %}{% if ts.signedUp %} style="background:green;"{% endif %}>
+    
+    {# Time Range -- needs multi date possibility #}
     {{ ts.startTime|from_sakai_timestamp|date:"g:iA"|lower }} - {{ ts.endTime|from_sakai_timestamp|date:"g:iA"|lower }}
     <br />
-    <small>Max Slots:{{ ts.maxNoOfAttendees }}</small>
-      
+    {# max Attendees #}
+    <small>Places available: {{ ts|places_left }}/{{ ts.maxNoOfAttendees }}</small>
+    <br />
+{# if the tutorial is set up to display attendee names #}
 {% if ts.displayAttendees %}
-        <ul>
   {% for attendee in ts.attendees %}
-          <li>{{ attendee.displayName }}</li>
+          {{ attendee.displayName }}{% if not forloop.last %},{% endif %}
   {% endfor %}
-        </ul>
 {% else %}
-  {% if ts.signedUp %}
-    {% if ts.attendees|length_is:"1" %}
-        You 
-    {% else %}
+{# otherwise #}
+  {% if ts.signedUp and not ts.attendees|length_is:"1" %}
         You and {{ ts.attendees|length|add:"-1" }} other{{ ts.attendees|length|add:"-1"|pluralize }}
-    {% endif %}
   {% else %}
     {% if ts.attendees|length_is:"0" %}
         No one yet
@@ -71,29 +72,54 @@
     {% endif %}
   {% endif %}
 {% endif %}
-      {% if ts.signedUp %}Signed up{% else %}{% if ts.onWaitList %}On waiting list{% endif %}{% endif %}
-        <form method="post" action=".">
+{# end #}
+
+{# Is user signed up or on waiting list? #}
+<br />{% if ts.signedUp %}
+    You're Signed up
+    {% else %}{% if ts.onWaitList %}You're on the waiting list
+    {% endif %}
+{% endif %}
+
+<form method="post" action=".">
           <input type="hidden" name="timeslot_id" value="{{ ts.id }}"/>
+{% comment %}
+    If meeting has
+       a) Not Expired
+       b) Not passed its deadline
+       c) Is available to sign up
+       d) Time slot is not locked 
+{% endcomment %}
+
+
+{# The following mass of ifs results in a relevant button being displayed per time slot #}
 {% if not event.meetingExpired and not event.passedDeadline and event.startToSignUp and not ts.locked %}
+    {# User is signed up to this slot, display cancel button #}
   {% if ts.signedUp %}
           <button type="submit" name="action" value="cancelSignup">Cancel</button>
   {% else %}
+    {# User is on waiting list #}
     {% if ts.onWaitList %}
           <button type="submit" name="action" value="removeWaitList">Leave waiting list</button>
     {% else %}
+    {# Slot is available #}
       {% if ts.available %}
+      {# User is signed up to a different slot #}
         {% if signedUp %}
           <button type="submit" name="action" value="addToWaitList">Move here</button>
         {% else %}
+      {# Let user sign up #}
           <button type="submit" name="action" value="signup">Sign up</button>
         {% endif %}
       {% else %}      
+      {# Let user join waiting list #}
           <button type="submit" name="action" value="addToWaitList">Join waiting list</button>
       {% endif %}
     {% endif %}
   {% endif %}
 {% endif %}
-        </form>
+</form>
+
 </li>
 {% endfor %}
 </ul>
