--- a/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/trunk/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -23,6 +23,14 @@ h3 {
 	font-size:150%;
 }
 
+div#content h2 + div.article h3 {
+	margin-top:0;
+}
+
+p.article-attribution {
+    font-style:italic;
+}
+
 div.container {
     width:800px;
     margin-left:auto;
@@ -122,43 +130,23 @@ li#access-qrcode img {
     display:block;
 }
 
-div.features {
-    width:505px;
-}
+   
 
-div.features ul {
-    padding-left:0;
-    list-style:none;
-}
 
-div.features img.even {
-    float: left;
-    margin-right:10px;
-    margin-bottom:10px;
-}
-
-div.features img.odd {
-    float: right;
-    margin-right:10px;
-    margin-bottom:10px;
-}    
-
-div.features li.feature-contacts {
-	list-style-image:;
-}
-
-div.features li {
-    display:block;
-    clear:both;
-}
-
-div.footer {
+div.footer div.container {
     clear:both;
     margin-top:30px;
     padding-top:20px;
     padding-bottom:15px;
     text-align:center;
-    background: #ffffff url(../png/desktop/footer-background.png) repeat-x scroll center top
+    background-color: #ffffff;
+    -moz-border-radius-topleft:10px;
+    -moz-border-radius-topright:10px;
+    
+    /*background: #ffffff url(../png/desktop/footer-background.png) repeat-x scroll center top;
+    border-top:1px dashed #002147;
+    border-bottom:1px dashed #002147;
+    */
 }
 
 div.footer img {
@@ -185,9 +173,24 @@ div.logos {
 
 /* Features */
 
+
+
+a#show-feature-contact span {
+  background-image:url('../png/index-icons/contact-bc.png'); }
+a#show-feature-maps span {
+  background-image:url('../png/index-icons/maps-bc.png'); }
+a#show-feature-z3950 span {
+  background-image:url('../png/index-icons/z3950-bc.png'); }
+a#show-feature-podcasts span {
+  background-image:url('../png/index-icons/podcasts-bc.png'); }
+a#show-feature-search span {
+  background-image:url('../png/index-icons/search-bc.png'); }
+a#show-feature-other span {
+  background-image:url('../png/index-icons/other-bc.png'); }
+
   .feature-list {
-    float:right;
-    width:115px;
+    float:left;
+    width:145px;
   }
   
   .feature-list ul {
@@ -201,16 +204,25 @@ div.logos {
   }
   
   .feature-list li {
-    border-left:1px solid #002147;
-    border-right:1px solid #002147;
-    margin:0;
+    margin-bottom:4px;
+    -moz-border-radius:10px;
   }
   
   .feature-list li a {
     color:#002147;
-    border-top:1px solid #002147;
     text-align:center;
     font-weight:bold;
+    padding: 0px 5px;
+  }
+  
+  .feature-list span {
+    background-repeat:no-repeat;
+    background-position:center left;
+    padding-left:30px;
+    display:block;
+    min-height:40px;
+    vertical-align:middle;
+    line-height:40px;
   }
   
   .feature-list li:hover {
@@ -222,26 +234,6 @@ div.logos {
     color:#ffffff;
   }
   
-  .feature-list li:first-child {
-    border-top:1px solid #002147;
-    -moz-border-radius-topleft:10px;
-    -webkit-border-topleft-radius:10px;
-    -moz-border-radius-topright:10px;
-    -webkit-border-topright-radius:10px;
-  }
-  
-  .feature-list li:first-child a {
-    border-top:0;
-  }
-  
-  .feature-list li:last-child {
-    border-bottom:1px solid #002147;
-    -moz-border-radius-bottomleft:10px;
-    -webkit-border-bottomleft-radius:10px;
-    -moz-border-radius-bottomright:10px;
-    -webkit-border-bottomright-radius:10px;
-  }
-  
   .feature-list a {
     display:block;
     padding:10px 4px;
@@ -249,16 +241,15 @@ div.logos {
   
   .feature-info {
     float:right;
-    width: 305px;
+    width: 295px;
     #height: 412px;
-    padding: 10px;
     border-radius:10px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     -khtml-border-radius:10px;
     background-color:rgba(255,255,255,0.5);
     background-color:rgb(255,255,255);
-    margin-left:20px;
+    margin-left:10px;
     
   }
   
@@ -286,11 +277,17 @@ div.logos {
   }
   
   #feature-descriptions {
-    width:665px;
+    width:625px;
     height:432px;
-    float:left;
+    float:right;
     position:relative;
     overflow:hidden;
+    padding: 10px;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -khtml-border-radius:10px;
+    background-color:#ffffff;
   }
 
 
@@ -322,16 +319,40 @@ div.slideshow {
    background-color:#ffffff;
    margin-top:15px;
    margin-right:15px;
-    border-radius:11px;
-    -moz-border-radius:11px;
-    -webkit-border-radius:11px;
-    -khtml-border-radius:11px;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -khtml-border-radius:10px;
 }
 
 div.slideshow ul {
   list-style:none;
   padding:0;
   margin:0;
+}
+
+div.slideshow img {
+  border-radius: 10px;
+  -moz-border-radius:10px;
+  -webkit-border-radius: 10px;
+  -khtml-border-radius:10px;
+}
+
+div.slideshow div.slideshow-caption {
+  position:absolute;
+  bottom:4px;
+  left:0;
+  right:0;
+  padding:4px 10px;
+  font-size:24px;
+  background-color:rgba(0, 33, 47, 0.4);
+  background: url('../png/slideshow/caption-background.png') bottom;
+  background-repeat:repeat-x;
+  color:#ffffff;
+  -moz-border-radius-bottomleft:10px;
+  -moz-border-radius-bottomright:10px;
+  
+  
 }
 
 
@@ -425,4 +446,4 @@ div.about h3 {
 div.about ul.icon-list {
   margin-bottom:0;
 }
-  
+
