--- a/tags/0.2/mobile_portal/mobile_portal/site-media/css/desktop_about.css
+++ b/tags/0.2/mobile_portal/mobile_portal/site-media/css/desktop_about.css
@@ -2,7 +2,6 @@ body {
     font-family: Arial,"Liberation Sans", sans-serif;
     margin:0;
 /*    background-color:#cfd9e5; */
-	background: #FFFFFF url(../png/desktop/backdrop.png) repeat-x scroll center top ;
     min-width:730px;
 
 	font-size:0.75em;
@@ -11,6 +10,8 @@ body {
 	font-variant:normal;
 	font-weight:normal;
 	line-height:1.33;
+	overflow:scroll;
+	background: #dce2f4 url(../png/desktop/backdrop.png) repeat-x scroll center top ;
 }
 
 a {
@@ -19,6 +20,15 @@ a {
 
 h3 {
 	line-height:0.9;
+	font-size:150%;
+}
+
+div#content h2 + div.article h3 {
+	margin-top:0;
+}
+
+p.article-attribution {
+    font-style:italic;
 }
 
 div.container {
@@ -32,14 +42,18 @@ div.header {
     position:relative;
 /*    background-color:#c5d2e0;*/
     height:145px;
+}
 
+div.header {
+	margin-bottom:5px;
+    
 }
 
 div.header-strapline {
     position:absolute;
     color:#ffffff;
-    bottom:15px;
-    left:15px;
+    top:30px;
+    left:0px;
     padding:0;
     margin:0;
     margin-right:145px;
@@ -48,13 +62,13 @@ div.header-strapline {
 }
 
 div.header-strapline h1 {
-    margin:0;
+    margin:0 0 0 10px;
 }
 
 div.header img.brandmark {
     position:absolute;
     top:15px;
-    right:15px;
+    right:0px;
     margin-left:15px;
     border:0;
 }
@@ -65,11 +79,21 @@ div.strapline {
 	color:#FFF;
 }
 
+div#content {
+    background-color:#ffffff;
+    padding:15px;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -khtml-border-radius:10px;
+}
+
 div.features, div.preview, div.access, div.data-usage, div.about {
     background-color:#ffffff;
-    border-radius:6px;
-    -moz-border-radius:6px;
-    -webkit-border-radius:6px;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -khtml-border-radius:10px;
 
     padding:15px;
 	
@@ -77,27 +101,10 @@ div.features, div.preview, div.access, div.data-usage, div.about {
 	list-style:none;
 }
 
-div.about {
-    margin: 15px;
-    margin-bottom:0;
+div.about p {
+    margin:0;
 }
 
-div.features h2, div.preview h2, div.access h2, div.data-usage h2 {
-    margin-top:0;
-}
-
-div.column-left {
-    float:left;
-    margin-left:15px;
-    margin-top:15px;
-}
-
-div.column-middle {
-    padding-left:15px;
-    width:220px;
-    float: left;
-    margin-top:15px;
-}
 
 div.access, div.data-usage {
     margin-top:15px;
@@ -123,41 +130,23 @@ li#access-qrcode img {
     display:block;
 }
 
-div.features {
-    width:505px;
-}
+   
 
-div.features ul {
-    padding-left:0;
-    list-style:none;
-}
 
-div.features img.even {
-    float: left;
-    margin-right:10px;
-    margin-bottom:10px;
-}
-
-div.features img.odd {
-    float: right;
-    margin-right:10px;
-    margin-bottom:10px;
-}    
-
-div.features li.feature-contacts {
-	list-style-image:;
-}
-
-div.features li {
-    display:block;
+div.footer div.container {
     clear:both;
-}
-
-div.footer {
-    clear:both;
-    padding-top:30px;
+    margin-top:30px;
+    padding-top:20px;
     padding-bottom:15px;
     text-align:center;
+    background-color: #ffffff;
+    -moz-border-radius-topleft:10px;
+    -moz-border-radius-topright:10px;
+    
+    /*background: #ffffff url(../png/desktop/footer-background.png) repeat-x scroll center top;
+    border-top:1px dashed #002147;
+    border-bottom:1px dashed #002147;
+    */
 }
 
 div.footer img {
@@ -182,4 +171,279 @@ div.logos {
     margin-bottom:30px;
 }
 
+/* Features */
+
+
+
+a#show-feature-contact span {
+  background-image:url('../png/index-icons/contact-bc.png'); }
+a#show-feature-maps span {
+  background-image:url('../png/index-icons/maps-bc.png'); }
+a#show-feature-z3950 span {
+  background-image:url('../png/index-icons/z3950-bc.png'); }
+a#show-feature-podcasts span {
+  background-image:url('../png/index-icons/podcasts-bc.png'); }
+a#show-feature-search span {
+  background-image:url('../png/index-icons/search-bc.png'); }
+a#show-feature-other span {
+  background-image:url('../png/index-icons/other-bc.png'); }
+
+  .feature-list {
+    float:left;
+    width:145px;
+  }
+  
+  .feature-list ul {
+    list-style:none;
+    margin:0;
+    padding-left:0;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -khtml-border-radius:10px;
+  }
+  
+  .feature-list li {
+    margin-bottom:4px;
+    -moz-border-radius:10px;
+  }
+  
+  .feature-list li a {
+    color:#002147;
+    text-align:center;
+    font-weight:bold;
+    padding: 0px 5px;
+  }
+  
+  .feature-list span {
+    background-repeat:no-repeat;
+    background-position:center left;
+    padding-left:30px;
+    display:block;
+    min-height:40px;
+    vertical-align:middle;
+    line-height:40px;
+  }
+  
+  .feature-list li:hover {
+    color:#ffffff;
+    background-color:#002147;
+  }
+  
+  .feature-list li:hover a {
+    color:#ffffff;
+  }
+  
+  .feature-list a {
+    display:block;
+    padding:10px 4px;
+  }
+  
+  .feature-info {
+    float:right;
+    width: 295px;
+    #height: 412px;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -khtml-border-radius:10px;
+    background-color:rgba(255,255,255,0.5);
+    background-color:rgb(255,255,255);
+    margin-left:10px;
+    
+  }
+  
+  .feature-info h3 {
+    margin-top:0;
+  }
+  
+  .feature-info dt {
+    font-weight:bold;
+  }
+  
+  .feature-info dd {
+    padding-left:20px;
+    margin-left:0;
+  }
+  
+  .feature-info samp {
+    font-style:italic;
+    font-size:100%;
+  }
+  
+  .feature-info ul {
+    padding-left:20px;
+    margin-left:0;
+  }
+  
+  #feature-descriptions {
+    width:625px;
+    height:432px;
+    float:right;
+    position:relative;
+    overflow:hidden;
+    padding: 10px;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -khtml-border-radius:10px;
+    background-color:#ffffff;
+  }
+
+
+
+div.centre-col {
+   width:290px;
+   margin:15px 15px 0 15px;
+   float:left;
+}
+
+div.outer-col {
+   width:240px;
+   margin-top:15px;
+   float:left;
+}
+
+
+/* Slideshow */
+
+div.two-col {
+   width:545px;
+   margin-right:15px;
+   float:left;
+}
+
+div.slideshow {
+   width: 545px;
+   height: 360px;
+   background-color:#ffffff;
+   margin-top:15px;
+   margin-right:15px;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -khtml-border-radius:10px;
+}
+
+div.slideshow ul {
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+
+div.slideshow img {
+  border-radius: 10px;
+  -moz-border-radius:10px;
+  -webkit-border-radius: 10px;
+  -khtml-border-radius:10px;
+}
+
+div.slideshow div.slideshow-caption {
+  position:absolute;
+  bottom:4px;
+  left:0;
+  right:0;
+  padding:4px 10px;
+  font-size:24px;
+  background-color:rgba(0, 33, 47, 0.4);
+  background: url('../png/slideshow/caption-background.png') bottom;
+  background-repeat:repeat-x;
+  color:#ffffff;
+  -moz-border-radius-bottomleft:10px;
+  -moz-border-radius-bottomright:10px;
+  
+  
+}
+
+
+/* Preview */
+
+div.preview {
+  min-height:330px;
+}
+
+div.preview p {
+  text-align:center;
+  margin:0;
+  font-size:12pt;
+}
+
+div.preview p.domain-link {
+  text-align:center;
+  font-size:20pt;
+  margin:5px 0;
+}
+
+div.preview a:visited {
+  color:#0000ff;
+}
+
+div.preview hr {
+  margin:5px 0 15px 0;
+  padding:0;
+}
+
+ul.icon-list {
+  font-size:11pt;
+  list-style:none;
+  margin:5px 0 5px 22px;  
+  padding:0;
+}
+
+ul.icon-list li a {
+  display:block;
+  padding:10px 10px 10px 40px;
+  background-position:center left;
+  background-repeat:no-repeat;
+}
+
+a#code-qr-link {
+  background-image:url('../png/barcodes/qrcode-small.png');
+}
+
+a#code-dm-link {
+  background-image:url('../png/barcodes/datamatrix-small.png');
+}
+
+a#code-ms-link {
+  background-image:url('../png/barcodes/mstag-small.png');
+}
+
+a#social-facebook {
+  background-image:url('../png/barcodes/facebook.png');
+}
+
+a#social-twitter {
+  background-image:url('../png/barcodes/twitter.png');
+}
+
+a#social-identica {
+  background-image:url('../png/barcodes/identica.png');
+}
+
+a#wireless-setup {
+  background-image:url('../png/desktop/eduroam.png');
+  background-position:center left;
+  background-repeat:no-repeat;
+  display:block;
+  padding-left:95px;
+}
+
+p.preview-link a {
+  background-image:url('../png/desktop/monitor.png');
+  background-position:center left;
+  background-repeat:no-repeat;
+  padding:0px 10px 0px 40px;
+  margin-left:15px;
+  display:block;
+}
+
+div.about h3 {
+  text-align:center;
+  margin:0;
+}
+
+div.about ul.icon-list {
+  margin-bottom:0;
+}
 
